Changing the normal HTML CSS and JS project into a React Project

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div id="search">
-                    <input type="text" placeholder="Search">
+                    <input type="text" placeholder="Search" id="searchbar">
                 </div>
             </div>
             <div id="btm"></div>
